set config screen to run, phone (numeric) input for IP/subnet, removed ProgressDialog so as not to hide the results

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,7 @@
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     android:text="@string/hello" android:textSize="20px"/>
-<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ip"></TextView>
-<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
+<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/subnet"></TextView>
+<EditText android:id="@+id/EditText01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="phone"></EditText>
 <Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scan_now" android:layout_gravity="center"></Button>
 </LinearLayout>
