formatting, added num of threads to preferences, code, also moved button handler into its own function for code readability

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,4 +10,5 @@
 <TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prompt_port_mode"></TextView>
 <Spinner android:id="@+id/Spinner03" android:layout_height="wrap_content" android:layout_width="fill_parent"></Spinner>
 <Button android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prompt_scan_now" android:layout_gravity="center"></Button>
+<TextView android:id="@+d/TextView05" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prompt_see_prefs" android:layout_gravity="center"></TextView>
 </LinearLayout>
