--- a/res/layout/results.xml
+++ b/res/layout/results.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/results" android:layout_width="fill_parent"></TextView>
-<TextView android:id="@+id/TextView02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hello" android:scrollbars="vertical"></TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+	android:layout_width="fill_parent" 
+	android:layout_height="fill_parent" 
+	android:orientation="vertical">
+	<TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:text="@string/results" android:layout_width="fill_parent"></TextView>
+	<TextView android:id="@+id/TextView02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hello" android:scrollbars="vertical"></TextView>
 </LinearLayout>
